# Takka

./: .gitmodules  CMakeLists.txt  README.md  bedrock.mtl  bg.blend  bg.mtl  cube.blend  cube.blend1
RoomModel/: Room #1.mtl
RoomModel/Guitar/: materials.mat
RoomModel/Mug/: mugblack.mtl
RoomModel/TEXTURES/Guitar/: KC_outside_Xsm_blur.hdr
TakkaEditor/: CMakeLists.txt  main.cpp
TakkaEngineCore/: CMakeLists.txt  CreateFiles.sh  bat.bat
TakkaEngineCore/Shaders/: Fragment.glsl  Fragment_cube.glsl  Fragment_texture.glsl  Vertex.glsl  Vertex_cube.glsl  Vertex_texture.glsl
TakkaEngineCore/include/: Application.h  Camera.h  Event.h  EventManager.h  Logger.h  Mesh.h  Model.h  ORegister.h  Object.h  Shader.h  Texture.h  Utils.h  Window.h
TakkaEngineCore/include/Video/: Array.h  Buffer.h  EBO.h  UBO.h  VAO.h  VBO.h
TakkaEngineCore/src/: Application.cpp  Camera.cpp  Event.cpp  EventManager.cpp  Logger.cpp  Mesh.cpp  Model.cpp  ORegister.cpp  Object.cpp  Shader.cpp  Texture.cpp  Window.cpp
TakkaEngineCore/src/Video/: Buffer.cpp  EBO.cpp  UBO.cpp  VAO.cpp  VBO.cpp
